[package]
name = "randfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.51"
log = "0.4.6"
memchr = "2"
users = "0.11.0"
page_size = "0.4.2"
smallvec = "1.6.1"
zerocopy = "0.6"
fuser = "0.12.0"
env_logger = "0.9"
clap = { version = "4.0.29", features = ["cargo", "derive"] }
bincode = "1.3.1"
serde = { version = "1.0.102", features = ["std", "derive"] }
tempfile = "3"
rand = "0.8.5"
